--- a/src/Components/layout/Navigation.module.scss
+++ b/src/Components/layout/Navigation.module.scss
@@ -1,10 +1,7 @@
 .navbar-component {
     --navbar-bg: white;
     --nav-items-color: rgb(78, 78, 78);
-    // --nav-items-color: rgb(78, 78, 78);
-
     --nav-hover-color: black;
-
     --nav-active-txt-color: white;
     --nav-active-bg: rgb(39, 39, 39);
     --nav-sticky-top: 0;
@@ -89,7 +86,7 @@
 
             .nav-items.desktop {
                 flex-direction: row;
-                gap: 0 1rem;
+                gap: 0 0.4rem;
                 justify-content: space-around;
                 height: fit-content;
                 align-items: center;
